--- a/frontend/components/createProject/createProject-pug.component.pug
+++ b/frontend/components/createProject/createProject-pug.component.pug
@@ -21,9 +21,8 @@
 					a.addUser(ng-click="createProj.addParticipatorFlag=true;")
 						i.fa.fa-plus(aria-hidden='true')
 						lable Add Participant
-					select(ng-if="createProj.addParticipatorFlag",ng-change = "createProj.participantUpdate()" ng-model = "createProj.userToAdd")
-						option(value="") Select User to Add
-						option(ng-repeat="user in createProj.users track by $index" value="{{user._id}}") {{user.email}} 
+					select(ng-if="createProj.addParticipatorFlag",ng-change = "createProj.participantUpdate()" ng-model = "createProj.userToAdd",ng-options = "user._id as user.firstName + ' ' + user.secondName for user in createProj.users")
+						option(value="" selected hidden) Select User to Add
 					.participantCell(ng-repeat='userid in createProj.participants track by $index')
 						.participant_wrapper
 							.participantTitle {{createProj.getUserNameById(userid)}}
@@ -34,10 +33,9 @@
 				.projParticipants
 					a.addUser(ng-click="createProj.addAdminFlag=true;")
 						i.fa.fa-plus(aria-hidden='true')
-						lable Add Participant
-					select(ng-if="createProj.addAdminFlag",ng-change = "createProj.adminUpdate()" ng-model = "createProj.adminToAdd")
-						option(value="") Select User to Add
-						option(ng-repeat="user in createProj.users track by $index" value="{{user._id}}") {{user.email}} 
+						lable Add admin
+					select(ng-if="createProj.addAdminFlag",ng-change = "createProj.adminUpdate()",ng-model = "createProj.adminToAdd",ng-options = "user._id as user.firstName + ' ' + user.secondName for user in createProj.users")
+						option(value="" selected hidden) Select User to Add
 					.participantCell(ng-repeat='userid in createProj.admins track by $index')
 						.participant_wrapper
 							.participantTitle {{createProj.getUserNameById(userid)}}
