crud operations but without redirection

--- a/frontend/components/checkinsInfo/checkinsInfo-pug.component.pug
+++ b/frontend/components/checkinsInfo/checkinsInfo-pug.component.pug
@@ -5,7 +5,7 @@
                 .control-btn
                     a(href='')
                         i.fa.fa-commenting-o.fa-3x
-                    a(ng-link='["CheckinsCreate"]')
+                    a(ng-link="['CheckinsEdit', {id: chInfo.checkin._id}]")
                         i.fa.fa-pencil-square-o.fa-3x
                     button(ng-click='chInfo.deleteCheckin()')
                         i.fa.fa-trash-o.fa-3x
@@ -22,47 +22,3 @@
                     span.name {{var.user.firstName + ' ' + var.user.lastName }}
                     br
                     span {{var.answer}}
-            //- ul.qq-list
-            //-     h3 Thursday, July 14 
-            //-     p {{chInfo.groupedAsnwers.length}} 
-
-
-            //-     li.list(ng-repeat="i in chInfo.iter | orderBy: reverse")  {{i}}
-
-             
-            //-     li.list
-            //-         span.name Steve Marsh
-            //-         br
-            //-         span Alliance Rubber Company! They make rubber bands!
-            //-     li.list
-            //-         span.name Josh Fiske
-            //-         br
-            //-         span I just went to Speedy Car Wash. That was kind of a blast from the past.
-            //-     h3 Wednesday, July 13
-            //-     li.list
-            //-         span.name Nicole Katz
-            //-         br
-            //-         span You should check out French Paper company!
-            //-     li.list
-            //-         span.name Jennifer Young
-            //-         br
-            //-         span Answering this question during lunch so... Harold's Chicken Shack
-            //-     li.list
-            //-         span.name Jared Davis
-            //-         br
-            //-         span
-            //-             | Zildjian! They have to have been around forever. I don't think I can even name another
-            //-             | symbol.
-            //-     h3 Tuesday, July 12
-            //-     li.list
-            //-         span.name Cheryl Walters
-            //-         br
-            //-         span
-            //-             | I buy soap from Caswell Massey. They made the soap that George Washington once gave to General
-            //-             | Lafeyette as a thank you.
-            //-     li.list
-            //-         span.name Victor Cooper
-            //-         br
-            //-         span
-            //-             | I'd love to hear a story about Pendleton Wool. They've been around for over a century I
-            //-             | think.
