Min DeadlineDate Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/createProject/createProject.component.styl
+++ b/frontend/components/createProject/createProject.component.styl
@@ -61,14 +61,14 @@
 					user-select none
 					&:hover
 						box-shadow: 0 0 7px #3498db
-					input
+					.date
 						background-color none
 						border none
 						outline none
 						padding 8px
 						cursor pointer
 						user-select none
-						font-family "Open Sans"
+						font-family "Montserrat"
 						min-width 25%
 					i
 						font-size 28px
