--- a/frontend/components/project/project.component.pug
+++ b/frontend/components/project/project.component.pug
@@ -60,11 +60,7 @@
             p  Deadline:
             i.fa.fa-pencil(ng-click="proj.editDeadline=true",ng-if="!proj.editDeadline && proj.isUserAdmin")
             i.fa.fa-check(ng-click="proj.edit('deadline')",ng-if="proj.editDeadline")
-          p(ng-if="!proj.editDeadline") {{proj.localDate(proj.currentProject.endDate)}}
-          .input-group.dateEditor(ng-if="proj.editDeadline")
-              input.date(type='text', uib-datepicker-popup='dd.MM.yyyy', ng-model='proj.dtDeadline', is-open='proj.popup.opened', ng-required='true', close-text='Close', alt-input-formats='altInputFormats',placeholder="{{proj.localDate(proj.dtDeadline)}}")
-              a(type='button', ng-click='proj.open()')
-                i.fa.fa-calendar(aria-hidden='true')
+          p(uib-datepicker-popup='{{format}}', datepicker-options = 'proj.datePickerOpt', ng-model='proj.dtDeadline', ng-required='true', close-text='Close', alt-input-formats='altInputFormats',is-open = 'proj.editDeadline', ng-change="proj.edit('deadline')") {{proj.dtDeadline | date: "dd.MM.yyyy"}}
         .wrap.last(ng-if="proj.isUserAdmin")
           .delete_button
             button.delete(ng-click="proj.modalToggle()") Delete project
