--- a/frontend/components/project/project.component.styl
+++ b/frontend/components/project/project.component.styl
@@ -113,6 +113,7 @@
           border 1px solid black
           border-radius 7px
           padding 3px
+          margin-bottom 10px
           input
             border none
             outline none
