--- a/frontend/components/events/eventCreate.component.pug
+++ b/frontend/components/events/eventCreate.component.pug
@@ -23,8 +23,8 @@
         textarea(ng-model = "$ctrl.desc",ckeditor)
         .participants
           i.fa.fa-user(aria-hidden='true')
-          select(ng-change = "$ctrl.participantUpdate()" ng-model = "$ctrl.userToAdd")
-            option(ng-repeat="user in $ctrl.users track by $index" value="{{user._id}}") {{user.email}}
+          select(ng-change = "$ctrl.participantUpdate()" ng-model = "$ctrl.userToAdd",ng-options="user._id as user.email for user in $ctrl.users")
+            option(value ="" selected hidden) Select user to add
           .participantCell(ng-repeat='userid in $ctrl.participants track by $index')
             .participant_wrapper
               .participantTitle {{$ctrl.getUserNameById(userid)}}
