--- a/frontend/components/postMessage/postMessage.styl
+++ b/frontend/components/postMessage/postMessage.styl
@@ -8,6 +8,8 @@
     left 30%
     margin-bottom 50px
     background-color background-white
+    padding-right 5%
+    padding-left 5%
     header
         margin-bottom 30px
         display flex
@@ -51,6 +53,11 @@
             width 25%
             margin-left 10%
             margin-right 14%
+    .buttons
+        display flex
+        flex-direction row
+        justify-content space-between
+        flex-wrap wrap
     .sendBtn
         display flex
         justify-content center
