--- a/frontend/components/postMessage/postMessage.pug
+++ b/frontend/components/postMessage/postMessage.pug
@@ -4,19 +4,28 @@ section.post-message-wrapper
     div.fa.fa-close(ng-link='["MsgBoard"]')
       //img(ng-link='["MsgBoard"]', align='top', src='https://cdn3.iconfinder.com/data/icons/simple-files-1/128/No-128.png', alt='exit')
   hr
-  h1 Title
-  input(name="title",ng-model="postCtrl.title")
-  h1 Description
-  textarea(ckeditor,name='', id='', cols='30', rows='10',ng-model="postCtrl.desc")
-  //  form#uploadForm(action='/postMessage', method='post', enctype='multipart/form-data')
-  //          input(type='file', name='message')
-  //          input(type='submit', value='Upload')
-  //section.draft-post
-  //  select(name='drafts')
-  //    option(value='draft1') draft1
-  //    option(value='draft2') draft2
-  //    option(value='draft3') draft3
-  div.sendBtn
-    button(ng-click="postCtrl.draft()") Save as Draft
-  div.sendBtn
-    button(ng-click="postCtrl.post()") Post
+  form(name="message",novalidate)
+    h1 Title
+    input(name="title",type="text",ng-model="postCtrl.title",required,ng-minlength="3" ng-maxlength="30")
+    p(ng-show="message.title.$invalid" class="help-block") Title is required.
+    p(ng-show="message.title.$error.minlength" class="help-block") Title is too short.
+    p(ng-show="message.title.$error.maxlength" class="help-block") Title is too long.
+    h1 Description
+    input(ckeditor,type="text",name="text" , cols='30', rows='10',ng-model="postCtrl.desc",required,ng-minlength="10" ng-maxlength="300")
+    hr
+    p(ng-show="message.text.$invalid" class="help-block") Description is required.
+    p(ng-show="message.text.$error.minlength" class="help-block") Description is too short.
+    p(ng-show="message.text.$error.maxlength" class="help-block") Description is too long.
+    //  form#uploadForm(action='/postMessage', method='post', enctype='multipart/form-data')
+    //          input(type='file', name='message')
+    //          input(type='submit', value='Upload')
+    //section.draft-post
+    //  select(name='drafts')
+    //    option(value='draft1') draft1
+    //    option(value='draft2') draft2
+    //    option(value='draft3') draft3
+    .buttons
+      div.sendBtn
+        button(ng-click="postCtrl.draft(message.$valid)") Save as Draft
+      div.sendBtn
+        button(ng-click="postCtrl.post(message.$valid)") Post
