all checkins components nested in one

--- a/frontend/components/checkins/checkins-pug.component.pug
+++ b/frontend/components/checkins/checkins-pug.component.pug
@@ -1,157 +1,1 @@
-.checkins-wrapper
-    .checkins-container
-        // HEADER
-        div.checkins-header
-            .header-title.row.center-xs
-                h1 Check-ins
-            .header-button.row.center-xs
-                button(ng-link='["CheckinsCreate"]') Set up check-in
-        // ACCORDION
-        .checkins-accordion
-            input#week-list(type='radio', name='week', checked='')
-            input#monday(type='radio', name='week')
-            input#tuesday(type='radio', name='week')
-            input#wednesday(type='radio', name='week')
-            input#thursday(type='radio', name='week')
-            input#friday(type='radio', name='week')
-            input#saturday(type='radio', name='week')
-            input#sunday(type='radio', name='week')
-            ul.tabs
-                li
-                    label(for='week-list') QQ
-                li
-                    label(for='monday') Mo
-                li
-                    label(for='tuesday') Tu
-                li
-                    label(for='wednesday') We
-                li
-                    label(for='thursday') Th
-                li
-                    label(for='friday') Fr
-                li
-                    label(for='saturday') Sa
-                li
-                    label(for='sunday') Su
-            section.tab.all
-                label(for='week-list') Questions List
-                div(ng-repeat="checkin in check.checkIns track by $index")
-                    ul.content
-                        li.qq {{checkin.time}}
-                        li.qq
-                            a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
-                        li.qq
-                            div
-                                label.switch
-                                    input(type='checkbox', ng-click="check.turnOn(checkin)",ng-checked="checkin.isTurnedOn",ng-model="checkin.isTurnedOn")
-                                    .slider.round
-                    .user-list
-                        span.avatar(ng-repeat="partagenosse in checkin.participants track by $index") {{partagenosse.lastName.charAt(0) + partagenosse.firstName.charAt(0)}}
-                            //- span.avatar AK
-                            //- span.avatar DB
-                            //- span.avatar IH
-                            //- span.avatar MK
-                            //- span.avatar AS
-                            //- span.avatar VT
-                            //- span.avatar YV
-                            //- span.avatar YN
-                            //- span.avatar DS
-                            //- span.avatar DB
-            section.tab.mo
-                label(for='monday') Monday
-                div(ng-repeat="checkin in check.checkIns | filter: check.checkinFilter('Monday') ")
-                    ul.content
-                        li.qq {{checkin.time}}
-                        li.qq
-                            a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
-                        li.qq
-                            div
-                                label.switch
-                                    input(type='checkbox', ng-click="check.turnOn(checkin)",ng-checked="checkin.isTurnedOn",ng-model="checkin.isTurnedOn")
-                                    .slider.round
-                    .user-list
-                        span.avatar(ng-repeat="partagenosse in checkin.participants track by $index") {{partagenosse.lastName.charAt(0) + partagenosse.firstName.charAt(0)}}
-            section.tab.tu
-                label(for='tuesday') Tuesday
-                div(ng-repeat="checkin in check.checkIns | filter: check.checkinFilter('Tuesday') ")
-                    ul.content
-                        li.qq {{checkin.time}}
-                        li.qq
-                            a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
-                        li.qq
-                            div
-                                label.switch
-                                    input(type='checkbox', ng-click="check.turnOn(checkin)",ng-checked="checkin.isTurnedOn",ng-model="checkin.isTurnedOn")
-                                    .slider.round
-                    .user-list
-                        span.avatar(ng-repeat="partagenosse in checkin.participants track by $index") {{partagenosse.lastName.charAt(0) + partagenosse.firstName.charAt(0)}}
-            section.tab.we
-                label(for='wednesday') Wednesday
-                div(ng-repeat="checkin in check.checkIns | filter: check.checkinFilter('Wednesday') ")
-                    ul.content
-                        li.qq {{checkin.time}}
-                        li.qq
-                            a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
-                        li.qq
-                            div
-                                label.switch
-                                    input(type='checkbox', ng-click="check.turnOn(checkin)",ng-checked="checkin.isTurnedOn",ng-model="checkin.isTurnedOn")
-                                    .slider.round
-                    .user-list
-                        span.avatar(ng-repeat="partagenosse in checkin.participants track by $index") {{partagenosse.lastName.charAt(0) + partagenosse.firstName.charAt(0)}}
-            section.tab.th
-                label(for='thursday') Thursday
-                div(ng-repeat="checkin in check.checkIns | filter: check.checkinFilter('Thursday') ")
-                    ul.content
-                        li.qq {{checkin.time}}
-                        li.qq
-                            a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
-                        li.qq
-                            div
-                                label.switch
-                                    input(type='checkbox', ng-click="check.turnOn(checkin)",ng-checked="checkin.isTurnedOn",ng-model="checkin.isTurnedOn")
-                                    .slider.round
-                    .user-list
-                        span.avatar(ng-repeat="partagenosse in checkin.participants track by $index") {{partagenosse.lastName.charAt(0) + partagenosse.firstName.charAt(0)}}
-            section.tab.fr
-                label(for='friday') Friday
-                div(ng-repeat="checkin in check.checkIns | filter: check.checkinFilter('Friday') ")
-                    ul.content
-                        li.qq {{checkin.time}}
-                        li.qq
-                            a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
-                        li.qq
-                            div
-                                label.switch
-                                    input(type='checkbox', ng-click="check.turnOn(checkin)",ng-checked="checkin.isTurnedOn",ng-model="checkin.isTurnedOn")
-                                    .slider.round
-                    .user-list
-                        span.avatar(ng-repeat="partagenosse in checkin.participants track by $index") {{partagenosse.lastName.charAt(0) + partagenosse.firstName.charAt(0)}}
-            section.tab.sa
-                label(for='saturday') Saturday
-                div(ng-repeat="checkin in check.checkIns | filter: check.checkinFilter('Saturday') ")
-                    ul.content
-                        li.qq {{checkin.time}}
-                        li.qq
-                            a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
-                        li.qq
-                            div
-                                label.switch
-                                    input(type='checkbox', ng-click="check.turnOn(checkin)",ng-checked="checkin.isTurnedOn",ng-model="checkin.isTurnedOn")
-                                    .slider.round
-                    .user-list
-                        span.avatar(ng-repeat="partagenosse in checkin.participants track by $index") {{partagenosse.lastName.charAt(0) + partagenosse.firstName.charAt(0)}}
-            section.tab.su
-                label(for='sunday') Sunday
-                div(ng-repeat="checkin in check.checkIns | filter: check.checkinFilter('Sunday') ")
-                    ul.content
-                        li.qq {{checkin.time}}
-                        li.qq
-                            a(ng-link="['CheckinsInfo', {id: checkin._id}]") {{checkin.question}}
-                        li.qq
-                            div
-                                label.switch
-                                    input(type='checkbox', ng-click="check.turnOn(checkin)",ng-checked="checkin.isTurnedOn",ng-model="checkin.isTurnedOn")
-                                    .slider.round
-                    .user-list
-                        span.avatar(ng-repeat="partagenosse in checkin.participants track by $index") {{partagenosse.lastName.charAt(0) + partagenosse.firstName.charAt(0)}}
+﻿ng-outlet
