--- a/frontend/components/checkins/checkinsEdit-pug.component.pug
+++ b/frontend/components/checkins/checkinsEdit-pug.component.pug
@@ -22,7 +22,7 @@
                  ng-selected="CheckEd.frequency[0]")
                 select#schedule-second(ng-model='CheckEd.selectedTime', ng-options='item for item in CheckEd.time',
                 ng-selected='CheckEd.time[0]')
-                a(ng-click="CheckEd.save()" ng-link='["Checkins List"]')
+                a(ng-click="CheckEd.save()" )
                     i.fa.fa-floppy-o.fa-3x
 
                 //div.use-button
