--- a/frontend/components/checkins/checkinsInfo-pug.component.pug
+++ b/frontend/components/checkins/checkinsInfo-pug.component.pug
@@ -7,7 +7,7 @@
                         i.fa.fa-commenting-o.fa-3x
                     a(ng-link="['CheckinsEdit', {id: chInfo.checkin._id}]")
                         i.fa.fa-pencil-square-o.fa-3x
-                    a(ng-click='chInfo.deleteCheckin()' ng-link='["Checkins List"]')
+                    a(ng-click='chInfo.deleteCheckin()')
                         i.fa.fa-trash-o.fa-3x
                 .close-btn
                     a(ng-link='["Checkins List"]')
