--- a/frontend/components/calendar/calendarMonth/calendarMonth.styl
+++ b/frontend/components/calendar/calendarMonth/calendarMonth.styl
@@ -5,15 +5,21 @@
     color #ADADAD
 
 .calendar-month
-
+    height 100%
+    width 100%
+    margin 0
+    padding 7px
+    overflow-y hidden
     .month-header
         display flex
+        width 100%
+        height 10%
         justify-content space-around
         align-items center
         border 2px solid #ADADAD
         background-color #F5F5F5
         border-radius 10px
-        min-width 360px
+        min-width 346px
         i
             color #1D8DBF
             font-size 20px
@@ -36,25 +42,30 @@
                 //height 175px
                 z-index 2
     .month-body
+        margin 0
         margin-top 10px
         width 100%
-        min-width 360px
+        height 90%
+        min-width 346px
         background-color #F5F5F5
         padding 0
         table
-            margin 0
+            margin 0 auto
             margin-bottom 10px
-            width 100%
+            width 90%
+            min-width 346px
+            height 90%
             font-size 18px
-            font-family "Open Sans"
-            col(width='14.29')
-            col(width='14.29')
-            col(width='14.29')
-            col(width='14.29')
-            col(width='14.29')
+            font-family "Montserrat"
+            col(width='14.28')
+            col(width='14.28')
+            col(width='14.28')
+            col(width='14.28')
+            col(width='14.28')
             col(width='14.28')
             col(width='14.28')
             tr
+                width 100%
                 th
                     padding 2%
                     border-style solid
@@ -66,5 +77,6 @@
                 td
                     padding 1%
                     border 1px solid #808080
-                    text-align right
+                    text-align center
+                    vertical-align center
 
