--- a/frontend/components/checkinsWrapper/checkinsWrapper.styl
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.styl
@@ -4,6 +4,7 @@
     flex-flow column nowrap
     justify-content space-around
     align-content space-around
+    width 100%
 
 .resizable-row
     min-height 50px
@@ -24,3 +25,12 @@ section
         flex 0 0 400px
 #two
     overflow-y scroll
+    min-width 360px
+#one
+    min-width 364px
+    min-height 80vh
+    background-color #f5f5f5
+    ng-outlet
+        width 100%
+        height 100%
+    
