--- a/frontend/components/comments/messageComments.template.pug
+++ b/frontend/components/comments/messageComments.template.pug
@@ -1,7 +1,7 @@
 .comments-wrapper
-    section.row.center-xs
-        section.col-xs-8.comments-holder
-          section.row.comments-header
+    .row.center-xs
+        .col-xs-8.comments-holder
+          .row.comments-header
             span.col-xs-11 Comments
             |                     
             .middle-xs.col-xs-1.fa.fa-close.button(ng-link='["MsgBoard"]')
@@ -20,12 +20,12 @@
                 |                         
                 span.col-xs-2.comment-date {{coment.date}}
         
-          section.row.comments-tools
-            section.col-xs-12
-              section.row.message-holder
+          .row.comments-tools
+            .col-xs-12
+              .row.message-holder
                 span.attachment.button.col-xs-1.fa-paperclip.fa.col-xs-offset-11
-              section.row.center-xs.center-xs
+              .row.center-xs.center-xs
                 textarea.col-xs-11.user-message(ng-model="$ctrl.myComment")
               |                         
-              section.row
-                section.button.comment-button.col-xs-4.col-xs-offset-4(ng-click="$ctrl.sendComment()") Comment
+              .row
+                .button.comment-button.col-xs-4.col-xs-offset-4(ng-click="$ctrl.sendComment()") Comment
