--- a/frontend/components/comments/messageComments.template.pug
+++ b/frontend/components/comments/messageComments.template.pug
@@ -22,10 +22,14 @@
         
           .row.comments-tools
             .col-xs-12
-              .row.message-holder
-                span.attachment.button.col-xs-1.fa-paperclip.fa.col-xs-offset-11
-              .row.center-xs.center-xs
-                textarea.col-xs-11.user-message(ng-model="$ctrl.myComment")
-              |                         
-              .row
-                .button.comment-button.col-xs-4.col-xs-offset-4(ng-click="$ctrl.sendComment()") Comment
+              form(name="comment",novalidate)
+                .row.message-holder
+                  span.attachment.button.col-xs-1.fa-paperclip.fa.col-xs-offset-11
+                .row.center-xs.center-xs
+                  textarea.col-xs-11.user-message(type="text",name="text",ng-model="$ctrl.myComment",required,ng-minlength="3",ng-maxlength="250")
+                  hr
+                  p(ng-show="comment.text.$error.minlength" class="help-block") Comment is too short.
+                  p(ng-show="comment.text.$error.maxlength" class="help-block") Comment is too long.
+                |                         
+                .row
+                  .button.comment-button.col-xs-4.col-xs-offset-4(ng-click="$ctrl.sendComment(comment.$valid)") Comment
