--- a/frontend/components/messageBoard/messageBoard.pug
+++ b/frontend/components/messageBoard/messageBoard.pug
@@ -1,11 +1,11 @@
-section.messageBoard-wrapper
+.messageBoard-wrapper
   div.header
     .wrapper_lable
         h1 Message Board
     .wrapper_createButton.row.center-xs
         button(ng-link='["PostMessage"]') Post message
-  section.message-block(ng-repeat="message in msgBoard.messages track by $index")
-      section.user-info
+  .message-block(ng-repeat="message in msgBoard.messages track by $index")
+      .user-info
           header
               img.img(src="./img/person.gif")
               h3 {{message.author.firstName}} {{message.author.lastName}}
@@ -14,6 +14,6 @@ section.messageBoard-wrapper
             h3(ng-link='["EditMessage",{id:message._id}]') {{message.title}}
           read-more(ng-bind-html="message.description")
           p.post-date {{message.date | date:"dd/MM/yyyy 'at' h:mma"}}
-      section.use-button
+      .use-button
           div.fa.fa-files-o(ng-link='["File"]')
           div.fa.fa-comments-o(ng-link='["Message comments",{id:message._id}]')
