--- a/frontend/components/postMessage/postMessage.styl
+++ b/frontend/components/postMessage/postMessage.styl
@@ -71,3 +71,5 @@
             padding-bottom 1%
             margin-bottom 10px
             margin-top 20px
+            padding-right 18px
+            padding-left 18px
